Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10803

req_buffers_max and req_history_max setting problems

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      We hit LU-9372 OOM problems, and after applying

          LU-9372 ptlrpc: allow to limit number of service's rqbds

          we found two problems:

          

          1)Since 0 is a reserved value for @srv_nrqbds_max which

          means unlimited value, procfs write interface should support

          this value, otherwise, there is no way to change default behavior

          back.

       

          2)the check in ptlrpc_lprocfs_req_history_max_seq_write() was broken

          after this patch, the following check will always succeed if @srv_nrqbds_max

          is kept as default value 0:

          

          val > svc->srv_nrqbds_max/2

       

            bfaccini Bruno Faccini (Inactive)
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: